--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,16 @@ dependencies:
   http: ^0.13.5
   get_it: ^7.2.0
 
+
 dev_dependencies:
+  test: ^1.22.0
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.3.3
+  mockito: ^5.3.2
   flutter_lints: ^2.0.0
+
+
 
 flutter:
   uses-material-design: true
