--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dev_dependencies:
   test: ^1.22.0
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   build_runner: ^2.3.3
   mockito: ^5.3.2
   flutter_lints: ^2.0.0
